# arbitrium

./: .editorconfig  .gitignore  BUILD  CMakeLists.txt  bazel-arbitrium  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  package.sh  submission.cpp  tags  test.txt
app/connect_four/: connect_four.cc
arbitrium/: CMakeLists.txt  main.cpp
arbitrium/agents/: negamax.hpp  random.cpp  random.hpp
arbitrium/apps/: CMakeLists.txt  bb_test.cpp  connect_four.cpp  four_in_a_row.cpp  main.cpp  tic_tac_toe.cpp
arbitrium/competitions/: connect_four_bot.hpp  riddles_bot.hpp
arbitrium/core/: action.hpp  agent.hpp  bitboard.hpp  bitboard_pair.hpp  cache.hpp  engine.hpp  hash.hpp  hourglass.hpp  state.hpp
arbitrium/games/: CMakeLists.txt  connect_four_action.cpp  connect_four_action.hpp  connect_four_hash.hpp  connect_four_state.cpp  connect_four_state.hpp  tic_tac_toe_action.cpp  tic_tac_toe_action.hpp  tic_tac_toe_hash.hpp  tic_tac_toe_state.cpp  tic_tac_toe_state.hpp
arbitrium/lib/: action.cpp  action.hpp  agent.hpp  engine.cpp  engine.hpp  state.cpp  state.hpp
bots/light_riders/: BUILD  main.cc
games/: tic_tac_toe.cc
games/connect_four/: BUILD  connect_four.cc  connect_four_action.cc  connect_four_action.h  connect_four_state.cc  (+1 more)
include/: tic_tac_toe_action.h  tic_tac_toe_state.h
lib/: BUILD  CMakeLists.txt
nlib/: a.out  serializable.hpp  state.cpp
players/: BUILD
src/: tic_tac_toe_action.cc  tic_tac_toe_state.cc
system_headers/: array  bitset  chrono  cmath  iomanip  limits  map  numeric  queue  random  set  sstream  tuple  unordered_map  vector
(+62 files in other folders)
